--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 MONGODB_URL=
 JWT_SECRET=55S8WQ89EC848GHJ899QQQSCVQ88_-AASDFVB
+PAYPAL_SECRET=ARfroC_l0cHfksG5wQvBkOxJtuZuCvkTnqSBachxmLaQZZbChGk7DVH6oI1u_XtaWrSm7KNDF_qA8Gud
