--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@paypal/checkout-server-sdk": "^1.0.2",
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.9",
     "@types/jsonwebtoken": "^8.5.0",
