--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.0",
+    "date-fns": "^2.16.1",
     "live-server": "^1.2.1",
     "material-components-web": "^8.0.0",
     "node-sass": "^5.0.0"
