--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,11 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.15",
+    "multer": "^1.4.2",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.0.5"
+  },
+  "devDependencies": {
+    "@types/multer": "^1.4.5"
   }
 }
