--- a/backend/package.json
+++ b/backend/package.json
@@ -3,19 +3,19 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "13.x",
+    "npm": "6.x"
+  },
   "scripts": {
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
+    "build": "ts-node-dev node_modules src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@paypal/checkout-server-sdk": "^1.0.2",
-    "@types/cors": "^2.8.8",
-    "@types/express": "^4.17.9",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/mongoose": "^5.10.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -26,6 +26,10 @@
     "typescript": "^4.0.5"
   },
   "devDependencies": {
-    "@types/multer": "^1.4.5"
+    "@types/multer": "^1.4.5",
+    "@types/cors": "^2.8.8",
+    "@types/express": "^4.17.9",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/mongoose": "^5.10.1"
   }
 }
